syntax = "proto3";

package diploma;

option go_package = "user/proto";

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string error = 1; // ошибка
}

message AuthRequest {
  string login = 1;
  string password = 2;
}

message AuthResponse {
  string error = 1; // ошибка
}

message LogoutRequest {
}

message LogoutResponse {
  string error = 1; // ошибка
}

service User {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Auth(AuthRequest) returns (AuthResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}